# document-scanning-concept

./: README.md
intelligent-recognition/: Cargo.toml
intelligent-recognition/crates/scanner-detect/: Cargo.toml
intelligent-recognition/crates/scanner-detect/src/: lib.rs
intelligent-recognition/crates/scanner-digitalize/: Cargo.toml
intelligent-recognition/crates/scanner-digitalize/src/: lib.rs
intelligent-recognition/crates/scanner-preprocess/: Cargo.toml
intelligent-recognition/crates/scanner-preprocess/src/: lib.rs
intelligent-recognition/crates/scanner-rectify/: Cargo.toml
intelligent-recognition/crates/scanner-rectify/src/: lib.rs
intelligent-recognition/crates/scanner-scan/: Cargo.toml
intelligent-recognition/crates/scanner-scan/src/: lib.rs
intelligent-recognition/crates/scanner-types/: Cargo.toml
intelligent-recognition/crates/scanner-types/src/: lib.rs
intelligent-recognition/crates/scanner-wasm/: Cargo.toml
intelligent-recognition/crates/scanner-wasm/src/: lib.rs
intelligent-recognition/scanner-pipeline/: Cargo.toml
intelligent-recognition/scanner-pipeline/src/: lib.rs
scanner-pipeline/: Cargo.toml
web/: package-lock.json  package.json
