[package]
name = "scanner-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
scanner-types = { path = "../crates/scanner-types" }
scanner-preprocess = { path = "../crates/scanner-preprocess" }
scanner-detect = { path = "../crates/scanner-detect" }
scanner-scan = { path = "../crates/scanner-scan" }
scanner-rectify = { path = "../crates/scanner-rectify" }
scanner-digitalize = { path = "../crates/scanner-digitalize" }
